# agentic-study-assistant

backend/app/: README.md  __init__.py  main.py  pyproject.toml
backend/app/agents/shared/: __init__.py  types.py
backend/app/config/: __init__.py  logging.py  settings.py
backend/app/voice/stt/: stt_stream.py
backend/app/voice/tts/: cartesia_client.py  tts_stream.py
