[project]
name = "study-assistant-backend"
version = "0.1.0"
description = "Backend for the agentic study assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "assemblyai>=0.59.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
